<resources>
    <string name="app_name">Expensis-mobile</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="primaryColor">#</string>
    <string name="login">Login</string>
    <string name="register_now">Register now!</string>
    <string name="expensis">Expensis</string>
    <string name="register">Register</string>
    <string name="login_link">Have an account? Log in!</string>
    <string name="gender">Gender</string>
    <string name="date">Date of birth*</string>
    <string name="monthly_limit">Monthly limit</string>
    <string name="gender_hint">Gender*</string>
    <string name="required_field_sign">*</string>
    <string name="expenses">Expenses</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit profile</string>
    <string name="password_not_required">Password</string>
    <string name="confirm_password_not_required">Confirm password</string>
    <string name="back">back</string>
    <string name="add_expense">Add expense</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="creation_date">Creation date</string>
    <string name="my_expenses">My expenses</string>
    <string name="logout">logout</string>
    <string name="expense_details">Details</string>
    <string name="category">Category</string>
    <string name="title_add">Title*</string>
    <string name="expense_date">Expense date</string>
    <string name="value_add">Value*</string>
    <string name="add">Add</string>
    <string name="category_add">Category*</string>
    <string name="spinner_image">spinnerImage</string>
    <string name="select_statistic">Select statistics</string>
    <string name="income_range">Income range</string>
    <string name="age_range">Age range</string>
    <string name="show_statistics">Show statistics</string>
    <string name="allow_data_collection">Allow data collection</string>
    <string name="apply_filters">Apply filters</string>
    <string name="expenses_sum">0</string>
    <string name="current_month_expenses">Current month: </string>
    <string name="expenses_text_2">expenses:  </string>
    <string name="no_expenses_info">There are no expenses, add some!</string>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>

</resources>