<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/expense_item_background"
    android:maxHeight="90dp">

    <TextView
        android:id="@+id/expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_description"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/description"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/expense_title"
        app:layout_constraintTop_toBottomOf="@+id/expense_title" />

    <TextView
        android:id="@+id/expense_value"
        android:layout_width="113dp"
        android:layout_height="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/value"
        android:textAllCaps="false"
        android:textColor="#C53333"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_date"
        android:layout_width="110dp"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/creation_date"
        android:textAlignment="textEnd"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>