<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activities.RegisterActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_button"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeRangeSpinner" />

    <TextView
        android:id="@+id/LoginLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onLoginClicked"
        android:text="@string/login_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/passwordConfirmInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/expensis"
        android:textColor="@color/primaryColor"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:dropDownWidth="wrap_content"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/passwordConfirmInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordConfirmInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInput" />

    <TextView
        android:id="@+id/dateInput"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_action_date"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/date"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/genderSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/genderSpinner"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

    <EditText
        android:id="@+id/monthlyLimitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="monthlyLimit"
        android:drawableStart="@drawable/ic_action_monthly_limit"
        android:ems="10"
        android:hint="@string/monthly_limit"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/dateInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dateInput"
        app:layout_constraintTop_toBottomOf="@+id/dateInput" />

    <Spinner
        android:id="@+id/incomeRangeSpinner"
        android:layout_width="212dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:autofillHints="gender"
        android:ems="10"
        android:hint="@string/gender"
        app:layout_constraintEnd_toEndOf="@+id/monthlyLimitInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/monthlyLimitInput"
        app:layout_constraintTop_toBottomOf="@+id/monthlyLimitInput" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>