<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/expenseDetailsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/creationDateHeader"
        app:layout_constraintTop_toBottomOf="@+id/creationDateHeader"
        android:onClick="onCreationDateClicked"
        style="@style/Widget.AppCompat.EditText"
        android:background="@null"
        android:focusable="false"/>

    <TextView
        android:id="@+id/creationDateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:textStyle="italic"
        android:text="@string/creation_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseDetailsDescription" />

    <Spinner
        android:id="@+id/expenseDetailsCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/categoryHeader"
        app:layout_constraintTop_toBottomOf="@+id/categoryHeader" />

    <TextView
        android:id="@+id/categoryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="italic"
        android:layout_marginTop="32dp"
        android:text="@string/category"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseDetailsDate" />

    <TextView
        android:id="@+id/valueHeader"
        android:layout_width="wrap_content"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textStyle="italic"
        android:text="@string/value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseDetailsCategory" />

    <EditText
        android:id="@+id/expenseDetailsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/valueHeader"
        app:layout_constraintTop_toBottomOf="@+id/valueHeader"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:hint="@string/value" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_arrow_left"
        android:contentDescription="@string/back"
        android:onClick="onGoBackClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsHeader"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center|start"
        android:text="@string/expense_details"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteExpense"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_delete_expense"
        android:contentDescription="@string/back"
        android:onClick="onDeleteClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/editExpense"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_edit"
        android:contentDescription="@string/back"
        android:onClick="onEditClicked"
        app:layout_constraintEnd_toStartOf="@id/deleteExpense"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/expenseProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        />

    <EditText
        android:id="@+id/expenseDetailsTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/titleHeader"
        app:layout_constraintTop_toBottomOf="@+id/titleHeader"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:hint="@string/title"
        android:maxLength="70"/>

    <EditText
        android:id="@+id/expenseDetailsDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/descriptionHeader"
        app:layout_constraintTop_toBottomOf="@+id/descriptionHeader"
        android:maxLength="150" />

    <TextView
        android:id="@+id/titleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/descriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/description"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseDetailsTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>